style.css
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Raleway';
 }
 p, a {
     font-family: 'Roboto';
 }

header.background {
    height: 100vh;
    width: 100vw;
    text-align: center;
    background-image: url(./img/galaxy-background2.jpg);
    background-repeat: no-repeat;
    background-position: center center;
    background-attachment: scroll;
    background-size: cover;
    /* vw = viewport width */
    /* vh = viewport height */
}

header.background .intro-text {
  }
  
header.background .intro-text .intro-lead-in {
font-size: 1rem;
font-style: italic;
margin-bottom: 25px;
font-family: 'Raleway';
}

header.background .intro-text .intro-heading {
font-size: 3rem;
font-weight: 700;
margin-bottom: 25px;
font-family: 'Raleway';
}

#title-text {
    color: transparent;
    text-shadow: 2px 2px #000000;
    font-size: 4.5rem;
    -webkit-text-stroke-width: 2px;
    -webkit-text-stroke-color: #FCB001;
}
.subtitle-text {
    color: white;
    text-shadow: 2px 2px #000000;
}
.color-overlay {
    background: #080E0C;
    opacity: .4;
    background-blend-mode: overlay;
    position: absolute;
    width:100%;
    height:100%;
  
  }
.gray-text {
    color: #b7b5b5;
}
.rounded-button {
    border-radius: 10px;
}

.section-image {
    height: 50vh;
    width: 50vw;
    text-align: center;
    background-repeat: no-repeat;
    background-position: center center;
    background-attachment: scroll;
    background-size: cover;
    /* vw = viewport width */
    /* vh = viewport height */

}
.paragraph {
    color: #9AB0BD;
}
.section-heading {
    color: #0F3D56;
    font-size: 50px;
}
.section-subheading {
    color: #565555;
    font-size: 1.2rem;
}
.short-title {
    font-size: 40px;
}

.vertical-line {
    width: 1px; /* Line width */
      background-color: rgb(184, 179, 179); /* Line color */
      height: 100%; /* Override in-line if you want specific height. */
      float: left; /* Causes the line to float to left of content. 
        You can instead use position:absolute or display:inline-block
        if this fits better with your design */
}



footer.footer {
    background-color: black;
    border-top: 20px solid #0F3D56;
}

  /* Material styling */
  /* Rules for sizing the icon. */
.material-icons.md-18 { font-size: 18px; }
.material-icons.md-24 { font-size: 24px; }
.material-icons.md-36 { font-size: 36px; }
.material-icons.md-48 { font-size: 48px; }

/* Rules for using icons as black on a light background. */
.material-icons.md-dark { color: rgba(0, 0, 0, 0.54); }
.material-icons.md-dark.md-inactive { color: rgba(0, 0, 0, 0.26); }

/* Rules for using icons as white on a dark background. */
.material-icons.md-light { color: rgba(255, 255, 255, 1); }
.material-icons.md-light.md-inactive { color: rgba(255, 255, 255, 0.3); }
/* Icon circle */
.circle-icon {
    background: #9AB0BD;
    padding:30px;
    border-radius: 50%;
    }

.background-blue {
    background-color: #9AB0BD;
}
.button-darkblue {
 background-color: #0F3D56;
 color: white;
 padding: 15px 50px !important;
 font-family: 'Roboto';
 font-weight: 400;
}
.button-darkblue:hover{
 text-decoration: none;
 color: rgb(146, 136, 136);
 padding: 15px 50px !important;
 font-family: 'Roboto';
 font-weight: 400;
}
.ghost-action {
    color: #3d3b3b;
}
.ghost-action:hover {
    color: #615d5d;
    text-decoration:none;
}
#section3 {
    padding: 100px 0 100px 0;
}

@media (max-width: 425px) {
    #title-text {
     margin: 0;
     font-size: 10vw;    
     }   
 }
@media (max-width: 767px) {
    .section-heading {
        color: #0F3D56;
        font-size: 30px;
    }
    div.vertical-line {
        display:none;
        width: 0px;
    }
    .short-title {
        font-size: 20px;
    }
}
 @media (min-width: 768px) {
    section {
        padding: 150px 0;
    }

 }

